# clsh

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
lib/: CMakeLists.txt
lib/lua/: CMakeLists.txt
scripts/: shebang.lua  test.lua
src/: getline.c  getline.h  main.c
